--- a/cafe/css/style.css
+++ b/cafe/css/style.css
@@ -53,6 +53,20 @@ a.menu-logo {
     font-size: 1.125em;
 }
 
+@media (max-width: 739px) {
+    .menu {
+        text-align: center;
+    }
+    a.menu-logo {
+        float: none;
+        margin: 0 auto;
+    }
+    .menu-nav {
+        float: none;
+        clear: both;
+    }
+}
+
 /* Intro */
 
 .intro {
@@ -265,6 +279,25 @@ h2.produtos-mineira::before {
     padding: 10px 20px;
 }
 
+@media (min-width: 740px) and (max-width: 980px) {
+    .locais {
+        max-width: 720px;
+    }
+    .locais-item > div, .locais-item img {
+        width: 340px;
+    }    
+}
+
+@media (max-width: 739px) {
+    .locais {
+        max-width: 300px;
+    }
+    .locais-item > div, .locais-item img {
+        width: 300px;
+        margin: 0px;
+    }
+}
+
 /* Assine */
 .assine {
     background: #e7e4d8;
@@ -331,6 +364,35 @@ h2.produtos-mineira::before {
     cursor: pointer;
 }
 
+@media (min-width: 740px) and (max-width: 980px) {
+    .assine-container {
+        max-width: 720px;        
+    }
+
+    .assine-info {
+        width: 340px;
+    }
+
+    .assine form {
+        width: 340px;
+    }
+
+    .assine input {
+        width: 340px;
+    }
+}
+
+@media (max-width: 739px) {
+    .assine-container {
+        max-width: 300px;
+    }
+
+    .assine-info, .assine form, .assine input {
+        width: 300px;
+        margin: 10px 0 0 0;
+    }
+}
+
 /* Footer */
 .footer {
     background: #d6d3c8;
@@ -359,4 +421,20 @@ h2.produtos-mineira::before {
     float: right;
     margin: 0 10px;
     display: block;
+}
+
+@media(max-width: 739px) {
+    .footer-container {
+        max-width: 300px;
+    }
+
+    .footer p {
+        float: none;
+        margin: 0px;
+    }
+
+    .footer img {
+        float: none;
+        margin: 10px 0;
+    }
 }
